# Vivify-Quest

./: CMakeLists.txt  VivifyRuntime.cpp  mod.json  qpm.json  qpm.shared.json  qpm_defines.cmake
.github/workflows/: Build.yml  build-ndk.yml  main.yml
include/: VivifyCameraApplier.hpp  VivifyHandlers.hpp  VivifyNewHandlers.inl  main.hpp
src/: VivifyRuntime.cpp  main.cpp
